--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,12 +9,14 @@
   "author": "Plamen Michev",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.24",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
